# trading-recommendation-agent

./: .gitignore  AGENTS.md  CODEX_START_HERE.md  README.md  pyproject.toml  run_acceptance_evidence.py  run_adaptive_strategy_evaluation.py  run_alfred_revision_panel.py  run_alfred_revision_release_gate.py  run_alpaca_minute_archive.py  run_alpaca_news_capability_registry.py  run_alpaca_news_collect.py  run_alpaca_news_opportunity_evidence.py  run_alpaca_option_chain_capability_registry.py  run_alpaca_option_chain_collect.py  run_alpaca_option_contract_catalog.py  run_alpaca_option_skew.py  run_alpaca_option_surface.py  run_alpaca_option_term_structure.py  run_alpaca_paper_bootstrap.py  run_alpaca_paper_entry_smoke.py  run_alpaca_paper_mutation_recovery.py  run_alpaca_paper_preflight.py  run_alpaca_paper_protective_oco_smoke.py  run_alpaca_paper_readiness.py  run_alpaca_paper_recovery.py  run_alpaca_paper_safety.py  run_alpaca_paper_safety_mutation_smoke.py  run_alpaca_pilot_orb.py  run_alpaca_pilot_scanner.py  run_alpaca_security_master.py  run_alpaca_sip_entitlement_admission.py  run_alpaca_sip_historical_profile.py  run_alpaca_sip_live_actionability.py  run_alpaca_sip_quote_actionability_projection.py  run_alpaca_sip_spot_capture.py  run_alpaca_sip_trade_history_fixture.py  run_alpaca_sip_trade_stream_attempt_fixture.py  run_alpaca_sip_trade_stream_smoke.py  run_alpaca_sip_trade_stream_supervisor_fixture.py  (+114 more)
development_harness/: __init__.py  grok_command.py  grok_git_control.py  grok_path_metadata.py  grok_process_env.py  grok_task_runner.py  grok_verification.py  grok_verification_process.py  grok_worker_process.py  grok_worker_report.py  grok_workspace_fingerprint.py  grok_workspace_guard.py  grok_worktree_metadata.py  grok_worktree_topology.py  safe_command.py  task_contract.py
docs/: architecture_ko.md  kis_live_integration_ko.md  runtime_audit.md
examples/: example_intraday.csv
fixtures/: alpaca-sip-trade-history-reconnect.json  alpaca-sip-trade-history.json
scr_backtest/: kis_http.py  kis_intraday.py
tests/: alpaca_option_skew_fixtures.py  (+560 more)
(+1183 files in other folders)
