[project]
name = "trading-recommendation-agent"
version = "0.1.0"
description = "Paper-only US momentum research and recommendation agent"
requires-python = ">=3.12"
dependencies = [
  "httpx2[http2,brotli,zstd]",
  "pydantic>=2.11",
  "rich>=13.9",
  "typer>=0.15",
  "websockets>=16,<17",
]

[dependency-groups]
dev = [
  "basedpyright>=1.31",
  "pytest>=8.3",
  "ruff>=0.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = [
  "trading_agent",
  "scr_backtest",
  "run_kis_paper_scan.py",
  "run_kis_paper_watch.py",
  "run_kis_eod_catchup.py",
  "run_adaptive_strategy_evaluation.py",
  "run_shadow_challenger_replay.py",
  "run_kis_daytime_scan.py",
  "run_kis_premarket_scan.py",
  "run_session_continuity.py",
  "run_candidate_persistence.py",
  "run_paper_metrics.py",
  "run_intraday_lane_daily_snapshot.py",
  "run_lane_reviewer.py",
  "run_orb_lane_forward_validation.py",
  "run_kis_kr_ranking_collect.py",
  "run_kr_volume_surge_derive.py",
  "run_orb_forward_metrics.py",
  "run_market_risk_sensitivity.py",
  "run_scanner_forward_metrics.py",
  "run_scanner_candidate_sensitivity.py",
  "run_alpaca_minute_archive.py",
  "run_alpaca_staged_archive.py",
  "run_alpaca_pilot_orb.py",
  "run_alpaca_pilot_scanner.py",
  "run_alpaca_paper_bootstrap.py",
  "run_alpaca_paper_preflight.py",
  "run_alpaca_paper_readiness.py",
  "run_alpaca_paper_recovery.py",
  "run_alpaca_paper_safety.py",
  "run_alpaca_paper_mutation_recovery.py",
  "run_lane_control_plane_bootstrap.py",
  "run_ls_nws_collect.py",
  "trading_agent/alpaca_archive.py",
  "trading_agent/alpaca_daily_cache.py",
  "trading_agent/alpaca_daily_store.py",
  "trading_agent/alpaca_http.py",
  "trading_agent/alpaca_models.py",
  "trading_agent/alpaca_universe.py",
]
